[package]
name = "xous-tts-backend"
authors = ["bunnie <bunnie@kosagi.com>"]
description = "IPC API for Xous text to speech backend executables"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/betrusted-io/tts-backend"
homepage = "https://betrusted.io/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xous = "0.9"
xous-ipc = "0.10"
xous-names = {version = "0.9", package = "xous-api-names"}
log = "0.4.14"
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
rkyv = { version = "0.8.8", default-features = false, features = [
    "std",
    "alloc",
] }

[features]
default = []

# Revision history
# 0.1.0 - initial publication
# 0.1.1 - add documentation
# 0.1.2 - fix formatting and README
# 0.1.3 - add words per minute configuration knob
# 0.1.4 - update xous-names ref
# 0.1.5 - relax xous version requirements
# 0.1.6 - track xous-ipc 0.10